2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs: Add ToUpper/ToLower methods on
	XName.

	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs: Fixed bug that
	popped unmatched opening nodes when not in tree mode. Fixes exception
	in path bar when closing tags outnumber opening tags.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Fix build.

2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Show code
	templates for forced completion in free space. Fix accidental leak of
	attribute name triggering into free space.

2008-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track fix in text
	editor's completion line/col indexing. It's now 1-indexed, as it
	should be.

2008-11-07  Eric Butler  <eric@extremeboredom.net>
	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Don't explode
	in Timeout callback if the BaseXmlEditorExtension was disposed.

2008-11-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlMultipleClosingTagCompletionData.cs:
	Add additional closing elements to the completion list for all parent
	elements, that also close all intermediate elements.

	* Makefile.am:
	* MonoDevelop.XmlEditor.mdp: Updated.

2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix build dependencies.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Added new helper
	method.

2008-10-24  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs:
	* MonoDevelop.Xml.StateEngine/Parser.cs:
	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: