@@ -1,3 +1,11 @@
+2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Makefile.am:
+	* MonoDevelop.XmlEditor.mdp: Updated.
+
+	* MonoDevelop.Xml.StateEngine/XmlParsedDocument.cs: Moved
+	MoonlightParsedDocument to XmlParsedDocument in the Xml addin.
+
 2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Xml.StateEngine/XDom.cs: Add ToUpper/ToLower methods on
